[[v6.0.2]]
== 6.0.2

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit-framework-repo}+/milestone/113?closed=1+[6.0.2] milestone page in the JUnit
repository on GitHub.


[[v6.0.2-junit-platform]]
=== JUnit Platform

[[v6.0.2-junit-platform-bug-fixes]]
==== Bug Fixes

* Make `ConsoleLauncher` compatible with JDK 26 by avoiding final field mutations.

[[v6.0.2-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[v6.0.2-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[v6.0.2-junit-jupiter]]
=== JUnit Jupiter

[[v6.0.2-junit-jupiter-bug-fixes]]
==== Bug Fixes

* Allow using `@ResourceLock` on classes annotated with `@ClassTemplate` (or
  `@ParameterizedClass`).

[[v6.0.2-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[v6.0.2-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[v6.0.2-junit-vintage]]
=== JUnit Vintage

[[v6.0.2-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[v6.0.2-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[v6.0.2-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓